--- a/index9.html
+++ b/index9.html
@@ -5,26 +5,27 @@
 
 <!-- Webapp interface to use the UI_library. -->
 
-<h1>Select the UI_library classes to view:</h1>
-<-- Checkbox Grid -->
+<h1>Select the UI library classes to view:</h1>
+
+<!-- Checkbox Grid -->
 <table>
   <tr>  
-    <th>dropdown</th>
-    <th>input</th>
-    <th>navbar</th>
-    <th>radio</th>
-    <th>sidebar</th>
-    <th>tabs</th>
-    <th>toggle</th>
+    <th>Dropdowns</th>
+    <th>Inputs</th>
+    <th>Navbars</th>
+    <th>Radios</th>
+    <th>Sidebars</th>
+    <th>Tabs</th>
+    <th>Toggles</th>
   </tr>
   <tr>
-    <td>dropdown-basic</td>
-    <td>input-basic</td>
-    <td>navbar-top-left</td>
-    <td>radio-basic</td>
-    <td>sidebar-right</td>
-    <td><div><input type="checkbox" id="tab-right-box-shadow" name="tab-right-box-shadow" checked /><label for="tab-right-box-shadow">tab-right-box-shadow</label></div></td>
-    <td>toggle-box-shadow</td>
+    <td><div><input type="checkbox" id="dropdown-basic" name="dropdown-basic" /><label for="dropdown-basic">dropdown-basic</label></div></td>
+    <td><div><input type="checkbox" id="input-basic" name="input-basic" /><label for="input-basic">input-basic</label></div></td>
+    <td><div><input type="checkbox" id="navbar-top-left" name="navbar-top-left" /><label for="navbar-top-left">navbar-top-left</label></div></td>
+    <td><div><input type="checkbox" id="radio-basic" name="radio-basic" /><label for="radio-basic">radio-basic</label></div></td>
+    <td><div><input type="checkbox" id="sidebar-right" name="sidebar-right" /><label for="sidebar-right">sidebar-right</label></div></td>
+    <td><div><input type="checkbox" id="tab-right-box-shadow" name="tab-right-box-shadow" /><label for="tab-right-box-shadow">tab-right-box-shadow</label></div></td>
+    <td><div><input type="checkbox" id="toggle-box-shadow" name="toggle-box-shadow" /><label for="toggle-box-shadow">toggle-box-shadow</label></div></td>
   </tr>
   <tr>
     <td></td>
