--- a/index9.html
+++ b/index9.html
@@ -19,12 +19,12 @@
     <th>Toggles</th>
   </tr>
   <tr>
-    <td><div><input type="checkbox" id="dropdown-basic" name="dropdown-basic" /><label for="dropdown-basic">dropdown-basic</label></div><input id="dropdown-basic_num" type="text" wrap="hard" value="" placeholder="Number of dropdowns to create" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
-    <td><div><input type="checkbox" id="input-basic" name="input-basic" /><label for="input-basic">input-basic</label></div><input id="tab-round_num" type="text" wrap="hard" value="" placeholder="Number of tabs to create" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
+    <td><div><input type="checkbox" id="dropdown-basic" name="dropdown-basic" /><label for="dropdown-basic">dropdown-basic</label></div><input id="dropdown-basic_num" type="text" wrap="hard" value="" placeholder="Number of dropdown elements" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
+    <td><div><input type="checkbox" id="input-basic" name="input-basic" /><label for="input-basic">input-basic</label></div><input id="input-basic_num" type="text" wrap="hard" value="" placeholder="Number of input elements" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
     <td><div><input type="checkbox" id="navbar-top-left" name="navbar-top-left" /><label for="navbar-top-left">navbar-top-left</label></div></td>
-    <td><div><input type="checkbox" id="radio-basic" name="radio-basic" /><label for="radio-basic">radio-basic</label></div><input id="tab-round_num" type="text" wrap="hard" value="" placeholder="Number of tabs to create" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
+    <td><div><input type="checkbox" id="radio-basic" name="radio-basic" /><label for="radio-basic">radio-basic</label></div><input id="radio-basic_num" type="text" wrap="hard" value="" placeholder="Number of radio elements" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
     <td><div><input type="checkbox" id="sidebar-right" name="sidebar-right" /><label for="sidebar-right">sidebar-right</label></div></td>
-    <td><div><input type="checkbox" id="tab-right-box-shadow" name="tab-right-box-shadow" /><label for="tab-right-box-shadow">tab-right-box-shadow</label></div><input id="tab-round_num" type="text" wrap="hard" value="" placeholder="Number of tabs to create" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
+    <td><div><input type="checkbox" id="tab-right-box-shadow" name="tab-right-box-shadow" /><label for="tab-right-box-shadow">tab-right-box-shadow</label></div><input id="tab-right-box-shadow_num" type="text" wrap="hard" value="" placeholder="Number of tab elements" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
     <td><div><input type="checkbox" id="toggle-box-shadow" name="toggle-box-shadow" /><label for="toggle-box-shadow">toggle-box-shadow</label></div></td>
   </tr>
   <tr>
@@ -33,7 +33,7 @@
     <td></td>
     <td></td>
     <td></td>
-    <td><div><input type="checkbox" id="tab-right" name="tab-right" /><label for="tab-right">tab-right</label></div><input id="tab-round_num" type="text" wrap="hard" value="" placeholder="Number of tabs to create" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
+    <td><div><input type="checkbox" id="tab-right" name="tab-right" /><label for="tab-right">tab-right</label></div><input id="tab-right_num" type="text" wrap="hard" value="" placeholder="Number of tab elements" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
     <td></td>
   </tr>
   <tr>
@@ -42,7 +42,7 @@
     <td></td>
     <td></td>
     <td></td>
-    <td><div><input type="checkbox" id="tab-left-box-shadow" name="tab-left-box-shadow" /><label for="tab-left-box-shadow">tab-left-box-shadow</label></div><input id="tab-round_num" type="text" wrap="hard" value="" placeholder="Number of tabs to create" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
+    <td><div><input type="checkbox" id="tab-left-box-shadow" name="tab-left-box-shadow" /><label for="tab-left-box-shadow">tab-left-box-shadow</label></div><input id="tab-left-box-shadow_num" type="text" wrap="hard" value="" placeholder="Number of tab elements" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
     <td></td>
   </tr>
   <tr>
@@ -51,7 +51,7 @@
     <td></td>
     <td></td>
     <td></td>
-    <td><div><input type="checkbox" id="tab-left" name="tab-left" /><label for="tab-left">tab-left</label></div><input id="tab-round_num" type="text" wrap="hard" value="" placeholder="Number of tabs to create" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
+    <td><div><input type="checkbox" id="tab-left" name="tab-left" /><label for="tab-left">tab-left</label></div><input id="tab-left_num" type="text" wrap="hard" value="" placeholder="Number of tab elements" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
     <td></td>
   </tr>
   <tr>
@@ -60,7 +60,7 @@
     <td></td>
     <td></td>
     <td></td>
-    <td><div><input type="checkbox" id="tab-round-box-shadow" name="tab-round-box-shadow" /><label for="tab-round-box-shadow">tab-round-box-shadow</label></div><input id="tab-round_num" type="text" wrap="hard" value="" placeholder="Number of tabs to create" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
+    <td><div><input type="checkbox" id="tab-round-box-shadow" name="tab-round-box-shadow" /><label for="tab-round-box-shadow">tab-round-box-shadow</label></div><input id="tab-round-box-shadow_num" type="text" wrap="hard" value="" placeholder="Number of tab elements" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
     <td></td>
   </tr>
   <tr>
@@ -70,7 +70,7 @@
     <td></td>
     <td></td>
     <td><div><input type="checkbox" id="tab-round" name="tab-round" /><label for="tab-round">tab-round</label></div>
-<input id="tab-round_num" type="text" wrap="hard" value="" placeholder="Number of tabs to create" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
+<input id="tab-round_num" type="text" wrap="hard" value="" placeholder="Number of tab elements" rows="10" cols="100" style="display:block; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;"></td>
     <td></td>
   </tr>
 </table> 
@@ -94,6 +94,13 @@ module.UI_library = UI_library;
 /* * { margin: 0; padding: 0; box-sizing: border-box; } */
 /* #ebebeb = light gray */
 /* body { font-family: 'Lato', sans-serif; font-size: 14px; padding: 70px; background: #ebebeb; } */
+
+
+table {vertical-align: top; border-collapse: collapse; position: relative; z-index: 0; border: 0.5px solid #b3b3b3; }
+
+tr {vertical-align: top; border: 0.5px solid #b3b3b3; padding: 10px 10px; width: 800px; }
+
+th, td {vertical-align: top; border: 0.5px solid #b3b3b3; padding: 10px; width: 800px; }
 </style>
 
 
